fixed object problem and more layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 h1 {
     font-size: 20px; 
     text-transform: uppercase;
+    margin-left: 20px; 
 }
 
 p {
@@ -57,6 +58,7 @@ h2 {
     grid-template-columns: repeat(3, 30%);
     grid-template-rows: 20% 20% 20% 20%;
     gap: 20px;
+    margin: 20px; 
    }
 
    .card {
